@@ -6,10 +6,27 @@
 #     This script is free software; you can redistribute it and/or      #
 #            modify it under the same terms as Perl itself.             #
 #########################################################################
-use utf8;  # can't get utf8 strings to work, tried many combinations :-(
-eval "require './Term/Clui.pm'";
+#use utf8;
+if (($ENV{LANG} =~ /utf-?8/i) || ($ENV{LC_TYPE} =~ /utf-?8/i)) {
+	$Brillouin = "L\x{00e9}on Brillouin";
+	$Delbrueck = "Max Delbr\x{00fc}ck";
+	$Descartes = "Ren\x{00e9} Descartes";
+	$Goedel    = "Kurt G\x{00f6}del";
+	$Levy      = "Paul L\x{00e9}vy";
+	$Poincare  = "Henri Poincar\x{00e9}";
+	$Schroedinger = "Erwin Schr\x{00f6}dinger";
+} else {
+	$Brillouin = "L\x{e9}on Brillouin";
+	$Delbrueck = "Max Delbr\x{fc}ck";
+	$Descartes = "Ren\x{e9} Descartes";
+	$Goedel    = "Kurt G\x{f6}del";
+	$Levy      = "Paul L\x{e9}vy";
+	$Poincare  = "Henri Poincar\x{e9}";
+	$Schroedinger = "Erwin Schr\x{f6}dinger";
+}
+eval "require 'Term/Clui.pm'";
 if (!$@) {
-	warn "using ./Term/Clui.pm\n";
+	warn "using Term::Clui\n";
 } else {
 	eval "require '../Clui.pm'";
 	if (!$@) {
@@ -45,7 +62,6 @@ while (1) {
 }
 
 sub test_choose {
-	use utf8;
 	my @colours = ('Red','Orange','Black','Grey','Blue');
 	my @paints  = (
 	'Bizzare extremely long name that certainly will never occur on any real artist pallette',
@@ -60,25 +76,25 @@ sub test_choose {
 	'Nicolas Bernouilli', 'Friedrich Wilhelm Bessel', 'John Bell',
 	'Antoine Becquerel', 'Hans Bethe', 'David Bohm', 'Niels Bohr',
 	'Ludwig Boltzmann', 'Hermann Bondi', 'George Boole', 'Max Born',
-	'Satyendra Bose', 'Robert Boyle', 'Léon Brillouin', 'Eugenio Calabi',
+	'Satyendra Bose', 'Robert Boyle', $Brillouin, 'Eugenio Calabi',
 	'Georg Cantor', 'James Chadwick', 'Gregory Chaitin',
 	'Subrahmanyan Chandrasekar', 'Geoffrey Chew', 'Alonzo Church',
 	'John Horton Conway', 'Francis Crick', 'Marie Curie', 'Charles Darwin',
-	'Humphrey Davy', 'Richard Dawkins', 'Louis de Broglie', 'Max Delbrück',
-	'René Descartes', 'Willem de Sitter', 'Bruce DeWitt', 'Paul Dirac',
+	'Humphrey Davy', 'Richard Dawkins', 'Louis de Broglie', $Delbrueck,
+	$Descartes, 'Willem de Sitter', 'Bruce DeWitt', 'Paul Dirac',
 	'Freeman Dyson', 'Arthur Stanley Eddington', 'Albert Einstein',
 	'Leonhard Euler', 'Hugh Everett', 'Michael Faraday', 'Pierre Fatou',
 	'Mitchell Feigenbaum', 'Pierre de Fermat', 'Enrico Fermi',
 	'Richard Feynman', 'Joseph Fraunhofer', 'Galileo Galilei',
 	'Evariste Galois', 'George Gamov', 'Carl Friedrich Gauss',
-	'Murray Gell-Mann', 'Kurt Gödel', 'Alan Guth', 'Stephen Hawking',
+	'Murray Gell-Mann', $Goedel, 'Alan Guth', 'Stephen Hawking',
 	'Felix Hausdorff', 'Werner Heisenberg', 'Charles Hermite',
 	'Peter Higgs', 'David Hilbert', 'Fred Hoyle', 'Edwin Hubble',
 	'Christian Huygens', 'David Hilbert', 'Edwin Hubble', 'Pascual Jordan',
 	'Gaston Julia', 'Marc Kac', 'Theodor Kaluza', 'Stuart Kauffman',
 	'William Lord Kelvin', 'Gustav Robert Kirchhoff', 'Oskar Klein',
 	'Helge von Kock', 'Willis Lamb', 'Lev Davidovich Landau', 'Paul Langevin',
-	'Pierre Simon de Laplace', 'Gottfried Wilhelm Leibnitz', 'Paul Lévy',
+	'Pierre Simon de Laplace', 'Gottfried Wilhelm Leibnitz', $Levy,
 	'Hendrik Lorentz', 'James Clark Maxwell', 'Marston Morse',
 	'Benoit Mandelbrot', 'Gregor Mendel', 'Dmitri Mendeleev', 'Robert Millikan',
 	'Hermann Minkowski', 'John von Neumann', 'Isaac Newton', 'Emmy Noether',
@@ -86,9 +102,9 @@ sub test_choose {
 	'Abraham Pais', 'Heinz Pagels', 'Vilfredo Pareto', 'Louis Pasteur',
 	'Wolfgang Pauli', 'Linus Pauling', 'Guiseppe Peano', 'Rudolf Peierls',
 	'Roger Penrose', 'Arno Penzias', 'Jean Perrin', 'Max Planck',
-	'Boris Podolsky', 'Henri Poincaré', 'Isidor Rabi', 'Srinivasa Ramanujan',
+	'Boris Podolsky', $Poincare, 'Isidor Rabi', 'Srinivasa Ramanujan',
 	'Lord Rayleigh', 'Lewis Fry Richardson', 'B. Riemann', 'Nathan Rosen',
-	'Ernest Rutherford', 'Abdus Salam', 'Erwin Schrödinger',
+	'Ernest Rutherford', 'Abdus Salam', $Schroedinger,
 	'Karl Schwarzschild', 'Julian Schwinger', 'Claude Shannon',
 	'Waclaw Sierpinski', 'Leo Szilard', 'Kip Thorne', 'Alan Turning',
 	'Sin-itro Tomonaga', 'Stanislaw Ulam', 'James Watson', 'Karl Weierstrauss',
