@@ -39,3 +39,4 @@
 20090307 1.41 icol,irow managed by puts; Install removed; Py3 translation
 20090928 1.42 fixed bug in &choose with items longer than screen-width
 20091003 1.43 choose and inform use :encoding(utf8) when in a utf8 environment
+20091104 1.44 ask() handles left-arrow at start of string
